@@ -11,8 +11,8 @@ hp8656		gpibgw:gpib0,7
 hp3488		gpibgw:gpib0,8
 
 # Native vxi (lxi) devices
-a34110		meter:instr0
-a6032		scope:instr0
+a34110		meter:inst0
+a6032		scope:inst0
 
 # These devices are directly attached to a linux-gpib board
 r5005		5
@@ -21,4 +21,3 @@ sr620		15
 
 # This device just takes a hostname
 ics8065		gpibgw
-
