@@ -1,113 +1,0 @@
-interface {
-	minor = 0
-	board_type = "ni_pci"
-	pad = 0
-	master = yes
-}
-
-device {
-	minor = 0
-	name = "hp3455"
-	pad = 1
-	eos = 0xa
-	set-reos = no
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T30s
-}
-
-device {
-	minor = 0
-	name = "hp54645"
-	pad = 4
-	eos = 0xa
-	set-reos = no
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T30s
-}
-
-device {
-	minor = 0
-	name = "tek2230"
-	pad = 2
-	eos = 0xa
-	set-reos = no
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T30s
-}
-
-device {
-	minor = 0
-	name = "r5005"
-	pad = 5
-	eos = 0xa
-	set-reos = yes
-	set-eot = yes
-	timeout = T30s 
-}
-
-device {
-	minor = 0
-	name = "hp1630"
-	pad = 7
-	eos = 0xa
-	set-reos = no
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T30s
-
-}
-
-device {
-	minor = 0
-	name = "hp8656"
-	pad = 7
-	eos = 0xa
-	set-reos = no
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T30s
-}
-
-device {
-	minor = 0
-	name = "dg535"
-	pad = 15
-	eos = 0xa
-	set-reos = no
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T30s
-}
-
-device {
-	minor = 0
-	name = "hp3457"
-	pad = 22
-	eos = 0xa
-	set-reos = yes
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T3s
-}
-
-device {
-	minor = 0
-	name = "hp3488"
-	pad = 8
-	eos = 0xa
-	set-reos = yes
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T3s
-}
