@@ -23,8 +23,6 @@ hp3457 \- control HP 3457A digital multimeter
 .B hp3457 [\fIOPTIONS\fR]
 .SH DESCRIPTION
 \fBhp3457\fR controls the HP 3457A digital multimeter via its GPIB interface.
-The instrument is presumed to be attached to GPIB adapter 0 and configured 
-with an entry in /etc/gpib.conf (see CONFIGURATION below).
 .PP
 \fBhp3457\fR performs actions selected on the command line in a fixed sequence:
 .IP
@@ -129,18 +127,6 @@ set xrange[0:]
 set yrange[-50:50]
 set title "HP 3457A Voltmeter Test"
 plot 'sample.dat' title "Sample Plot" with linesp;
-.fi
-.SH "CONFIGURATION"
-The /etc/gpib.conf entry for this instrument included the following
-parameters:
-.IP
-.nf
-eos = 0xa
-set-reos = yes
-set-bin = no
-set-xeos = no
-set-eot = yes
-timeout = T30s
 .fi
 .SH "SEE ALSO"
 "HP 3457A Multimeter Operating Manual", May 1986.
