@@ -25,8 +25,6 @@ hp3488 \- control HP 3488A switch/control unit
 .fi
 .SH DESCRIPTION
 \fBhp3488\fR controls the HP 3488A switch/control unit via its GPIB interface.
-The instrument is presumed to be attached to GPIB adapter 0 and configured 
-with an entry in /etc/gpib.conf (see CONFIGURATION below).
 .PP
 \fBhp3488\fR performs actions selected on the command line in a fixed sequence:
 .IP
@@ -86,17 +84,6 @@ while true; do
     hp3488 -0 201
     sleep 5
 done
-.fi
-.SH "CONFIGURATION"
-The /etc/gpib.conf entry for this instrument included the following
-parameters:
-.nf
-eos = 0xa
-set-reos = yes
-set-bin = no
-set-xeos = no
-set-eot = yes
-timeout = T3s
 .fi
 .SH "CAVEATS"
 The 3488 reports 44476 and 44477 cards as 44471.
